--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Minesweeper</title>
     <link rel="stylesheet" href="minesweeper.css">
     <script src="lib/tests.js"></script>
